removed boostrap.js, fixed white space after li element, rendered footer with proper license, updated db insert script

--- a/src/main/resources/static/css/freelancer.css
+++ b/src/main/resources/static/css/freelancer.css
@@ -463,6 +463,10 @@ footer .footer-below {
     text-align: left;
 }
 
+.list-inline>li {
+    padding-right: 0;
+}
+
 .portfolio-modal .modal-content .item-details {
     margin: 30px 0;
 }
